Fix mobile column spacing issues and menu links

--- a/css/style.css
+++ b/css/style.css
@@ -667,7 +667,7 @@ hr {
 
 .negative-left-col {
   padding-right: 0px;
-  padding-top: 3%;
+
 }
 
 .negative-right-col {
